Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5317

some intermittent test failures on ep-engine unit test with make test TEST_TIMEOUT=120

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta, 2.0
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      failure on ubuntu 64-bit
      Running [0149/0343]: restore: no data in there (couchstore)... TIMED OUT

      fails 3/10 times.

      this test almost always fails on centos

      Running [0327/0343]: test checkpoint collapse (sqlite)... TIMED OUT
      http://qa.hq.northscale.net/view/repo-2.0/view/unit%20tests/job/ep-engine/platforms=farshid-centos-57/48/console

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            farshid Farshid Ghods (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty