MB-5317 Remove checkpoint collapse unit test.

As checkpoint collapse unit test has some logical issues,
we decide to remove it from the test suite at this time.

Change-Id: I70dc0f3ec117e6665d889cfbe2a68c647c1791ad
Reviewed-on: http://review.couchbase.org/16293
Tested-by: Jin Lim <jin@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>