ep_testsuite.cc
@@ -3825,38 +3825,6 @@ static enum test_result test_checkpoint_deduplication(ENGINE_HANDLE *h, ENGINE_H
     return SUCCESS;
 }
 
-static enum test_result test_checkpoint_collapse(ENGINE_HANDLE *h, ENGINE_HANDLE_V1 *h1)
-{
-    protocol_binary_request_header *pkt = create_packet(CMD_STOP_PERSISTENCE, "", "");
-    pkt->request.vbucket = htons(0);
-
-    check(h1->unknown_command(h, NULL, pkt, add_response) == ENGINE_SUCCESS,
-          "Stop Persistence Command Failed");
-
-    item* itm;
-    for (int i = 0; i < 5000; i++) {
-        char key[9];
-        sprintf(key, "key%d", i);
-        check(store(h, h1, NULL, OPERATION_SET, key, "value", &itm, 0, 0)
-                    == ENGINE_SUCCESS, "Failed to store an item.");
-    }
-
-    wait_for_stat_to_be(h, h1, "vb_0:num_checkpoints", 2, "checkpoint");
-    wait_for_stat_to_be(h, h1, "vb_0:num_checkpoint_items", 5003, "checkpoint");
-
-    for (int i = 0; i < 3000; i++) {
-        char key[9];
-        sprintf(key, "key%d", i);
-        check(h1->remove(h, NULL, key, strlen(key), 0, 0) == ENGINE_SUCCESS,
-              "Failed remove with value.");
-    }
-
-    wait_for_stat_to_be(h, h1, "vb_0:num_checkpoints", 2, "checkpoint");
-    wait_for_stat_to_be(h, h1, "vb_0:num_checkpoint_items", 6003, "checkpoint");
-
-    return SUCCESS;
-}
-
 static enum test_result test_novb0(ENGINE_HANDLE *h, ENGINE_HANDLE_V1 *h1) {
     check(verify_vbucket_missing(h, h1, 0), "vb0 existed and shouldn't have.");
     return SUCCESS;
@@ -6975,10 +6943,6 @@ engine_test_t* get_tests(void) {
                  test_validate_checkpoint_params,
                  test_setup, teardown, NULL, prepare, cleanup,
                  BACKEND_ALL),
-        TestCase("test checkpoint collapse", test_checkpoint_collapse,
-                 test_setup, teardown,
-                 "chk_max_items=1000;chk_period=600",
-                 prepare, cleanup, BACKEND_ALL),
         TestCase("test checkpoint create", test_checkpoint_create,
                  test_setup, teardown,
                  "chk_max_items=5000;chk_period=600",
